--- a/main/res/values/changelog_release.xml
+++ b/main/res/values/changelog_release.xml
@@ -2,6 +2,11 @@
 <resources>
   <!-- changelog for the release branch -->
   <string name="changelog_release" translatable="false">\n
+     <b>Next bugfix release:</b>\n
+    · Fix: Wrong numbers in french language for amount of caches on lists\n
+    · Fix: Wrong error message when login fails due to wrong username and/or password\n
+    \n
+    \n
      <b>2020.06.14</b>\n
     · Change: Added closeout message for systems running on Android &lt; 5.0\n
     · Change: Unified Google Maps rotation settings into menu entry \"Map rotation\"\n
