--- a/main/res/values/changelog_master.xml
+++ b/main/res/values/changelog_master.xml
@@ -12,7 +12,7 @@
     · New: Integrate downloaded OpenStreetMap offline map files into c:geo after tapping on them\n
     · New: Optionally switch between compact and regular icon modes automatically depending on amount of caches displayed\n
     · New: Support cache rating and managing of favorites for geocaching.su\n
-    · New: Customize map line colors and widths\n
+    · New: Customize history, circle, route and track map line colors and widths\n
     · New: Upgraded several included libraries to reflect our new minimum system requirements\n
     · New: Add debug view for program settings\n
     · Fix: Removed styles / themes workarounds used for older Android versions\n
