--- a/main/res/menu/map_activity.xml
+++ b/main/res/menu/map_activity.xml
@@ -266,9 +266,19 @@
         </menu>
     </item>
     <item
-        android:id="@+id/menu_clear_individual_route"
-        android:title="@string/map_clear_individual_route"
+        android:id="@+id/menu_individual_route"
+        android:title="@string/individual_route"
         android:visible="false">
+        <menu>
+            <item
+                android:id="@+id/menu_sort_individual_route"
+                android:title="@string/map_sort_individual_route">
+            </item>
+            <item
+                android:id="@+id/menu_clear_individual_route"
+                android:title="@string/map_clear_individual_route">
+            </item>
+        </menu>
     </item>
     <item
         android:id="@+id/menu_as_list"
