--- a/main/res/values/changelog_master.xml
+++ b/main/res/values/changelog_master.xml
@@ -6,6 +6,8 @@
     · Change: System requirements: c:geo now requires your system to run at least Android 5.0\n
     · Change: Set target SDK to 29 to comply with upcoming requirements for Play store\n
     · Change: Set all connectors to https\n
+    · Change: New adaptive launcher icon, following the new specs from Play store\n
+    · Change: Open links in cache description as separate task\n
     · New: Load GPX track files and show track on map\n
     · New: Export trail history as GPX track file\n
     · New: Offer a link to download OpenStreetMap offline maps\n
@@ -17,5 +19,10 @@
     · New: Add debug view for program settings\n
     · Fix: Removed styles / themes workarounds used for older Android versions\n
     · Fix: Remove old program code no longer used for supported Android versions\n
+    · Fix: Fix for slider preference problem on Android 7\n
+    · Fix: Fix translation issues for several plural forms\n
+    · Fix: Adapt Whereigo URL checker to catch more Whereigo links\n
+    · Fix: Adapt to updated terracaching details URL\n
+    · Fix: Other code cleanup\n
   </string>
 </resources>
