--- a/main/res/values/numbers.xml
+++ b/main/res/values/numbers.xml
@@ -6,4 +6,13 @@
     <integer name="default_directionwidth">7</integer>
     <integer name="default_routewidth">7</integer>
     <integer name="default_trackwidth">7</integer>
+
+    <!-- seekbar preference default & max values -->
+    <integer name="brouter_threshold_default">10</integer>
+    <integer name="brouter_threshold_max">120</integer>
+    <integer name="waypoint_threshold_default">10</integer>
+    <integer name="waypoint_threshold_max">200</integer>
+    <integer name="proximitynotification_distance_max">1000</integer>
+    <integer name="proximitynotification_far_default">60</integer>
+    <integer name="proximitynotification_near_default">20</integer>
 </resources>
