--- a/main/res/xml/preferences.xml
+++ b/main/res/xml/preferences.xml
@@ -590,9 +590,11 @@
                 android:selectable="false"
                 android:summary="@string/init_showwaypoint_description"
                 android:title="@string/init_showwaypoints" />
-            <cgeo.geocaching.settings.WpThresholdPreference
+            <cgeo.geocaching.settings.SeekbarPreference
                 android:key="@string/pref_showwaypointsthreshold"
-                android:layout="@layout/preference_seekbar" />
+                app:min="0"
+                app:max="@integer/waypoint_threshold_max"
+                android:defaultValue="@integer/waypoint_threshold_default" />
             <CheckBoxPreference
                 android:defaultValue="false"
                 android:key="@string/pref_excludeWpOriginal"
@@ -628,9 +630,12 @@
                 android:selectable="false"
                 android:summary="@string/init_brouterThreshold_description"
                 android:title="@string/init_brouterThreshold" />
-            <cgeo.geocaching.settings.BrouterThresholdPreference
+            <cgeo.geocaching.settings.ProximityPreference
                 android:key="@string/pref_brouterDistanceThreshold"
-                android:layout="@layout/preference_seekbar" />
+                app:min="1"
+                app:max="@integer/brouter_threshold_max"
+                android:defaultValue="@integer/brouter_threshold_default"
+                app:highRes="false" />
             <CheckBoxPreference
                 android:defaultValue="false"
                 android:key="@string/pref_brouterShowBothDistances"
@@ -649,12 +654,20 @@
 
         <PreferenceCategory android:title="@string/settings_title_proximityNotification"
             android:layout="@layout/preference_category" >
-            <cgeo.geocaching.settings.ProximityFarPreference
+            <cgeo.geocaching.settings.ProximityPreference
                 android:key="@string/pref_proximityDistanceFar"
-                android:layout="@layout/preference_seekbar" />
-            <cgeo.geocaching.settings.ProximityNearPreference
+                app:label="@string/far_distance"
+                app:min="1"
+                app:max="@integer/proximitynotification_distance_max"
+                android:defaultValue="@integer/proximitynotification_far_default"
+                app:highRes="true" />
+            <cgeo.geocaching.settings.ProximityPreference
                 android:key="@string/pref_proximityDistanceNear"
-                android:layout="@layout/preference_seekbar" />
+                app:label="@string/near_distance"
+                app:min="1"
+                app:max="@integer/proximitynotification_distance_max"
+                android:defaultValue="@integer/proximitynotification_near_default"
+                app:highRes="true" />
             <CheckBoxPreference
                 android:defaultValue="false"
                 android:key="@string/pref_proximityNotificationGeneral"
@@ -687,11 +700,13 @@
                 android:title="@string/init_trailwidth"
                 android:dependency="@string/pref_maptrail"
                 android:selectable="false" />
-            <cgeo.geocaching.settings.MapLineWidthPreference
+            <cgeo.geocaching.settings.SeekbarPreference
                 android:key="@string/pref_mapline_trailwidth"
+                app:min="0"
+                app:max="100"
+                app:hasDecimals="false"
                 android:defaultValue="@integer/default_trailwidth"
-                android:dependency="@string/pref_maptrail"
-                android:layout="@layout/preference_seekbar" />
+                android:dependency="@string/pref_maptrail" />
 
             <cgeo.geocaching.settings.ColorpickerPreference
                 android:title="@string/init_directioncolor"
@@ -701,8 +716,11 @@
             <Preference
                 android:title="@string/init_directionwidth"
                 android:selectable="false" />
-            <cgeo.geocaching.settings.MapLineWidthPreference
+            <cgeo.geocaching.settings.SeekbarPreference
                 android:key="@string/pref_mapline_directionwidth"
+                app:min="0"
+                app:max="100"
+                app:hasDecimals="false"
                 android:defaultValue="@integer/default_directionwidth"
                 android:layout="@layout/preference_seekbar" />
 
@@ -714,8 +732,11 @@
             <Preference
                 android:title="@string/init_routewidth"
                 android:selectable="false" />
-            <cgeo.geocaching.settings.MapLineWidthPreference
+            <cgeo.geocaching.settings.SeekbarPreference
                 android:key="@string/pref_mapline_routewidth"
+                app:min="0"
+                app:max="100"
+                app:hasDecimals="false"
                 android:defaultValue="@integer/default_routewidth"
                 android:layout="@layout/preference_seekbar" />
 
@@ -727,8 +748,11 @@
             <Preference
                 android:title="@string/init_trackwidth"
                 android:selectable="false" />
-            <cgeo.geocaching.settings.MapLineWidthPreference
+            <cgeo.geocaching.settings.SeekbarPreference
                 android:key="@string/pref_mapline_trackwidth"
+                app:min="0"
+                app:max="100"
+                app:hasDecimals="false"
                 android:defaultValue="@integer/default_trackwidth"
                 android:layout="@layout/preference_seekbar" />
 
