--- a/main/res/values/numbers.xml
+++ b/main/res/values/numbers.xml
@@ -15,4 +15,8 @@
     <integer name="proximitynotification_distance_max">1000</integer>
     <integer name="proximitynotification_far_default">60</integer>
     <integer name="proximitynotification_near_default">20</integer>
+
+    <!-- history track -->
+    <integer name="historytrack_length_default">700</integer>
+    <integer name="historytrack_length_max">60000</integer>
 </resources>
