--- a/main/res/values/preference_keys.xml
+++ b/main/res/values/preference_keys.xml
@@ -100,6 +100,7 @@
     <string translatable="false" name="pref_value_pn_text_only">2</string>
     <string translatable="false" name="pref_value_pn_tone_and_text">3</string>
     <string translatable="false" name="pref_maptrail">maptrail</string>
+    <string translatable="false" name="pref_maptrail_length">maptrail_length</string>
     <string translatable="false" name="pref_mapline_trailcolor">mapline_trailcolor</string>
     <string translatable="false" name="pref_mapline_trailwidth">mapline_trailwidth</string>
     <string translatable="false" name="pref_mapline_directioncolor">mapline_directioncolor</string>
