--- a/main/res/values/changelog_master.xml
+++ b/main/res/values/changelog_master.xml
@@ -3,32 +3,44 @@
   <!-- changelog for the master branch -->
   <string name="changelog_master" translatable="false">
      <b>Next release:</b>\n
-    · Change: System requirements: c:geo now requires your system to run at least Android 5.0\n
-    · Change: Set target SDK to 29 to comply with upcoming requirements for Play store\n
-    · Change: Set all connectors to https\n
-    · Change: New adaptive launcher icon, following the new specs from Play store (also used on mainscreen)\n
-    · Change: Open links in cache description as separate task\n
-    · Change: Cachelist: Difficulty and terrain filter match exact values only, no longer ranges\n
-    · Change: Cachelist: Fast scroll only gets enabled after fling gesture with minimum length\n
-    · Change: Map: Renamed trail / trail history / history trail to history track\n
-    · New: Load GPX track files and show individual track on map\n
-    · New: Track history: Allow export as GPX track file\n
-    · New: Track history: Make max. length configurable\n
-    · New: Individual routes: Allow sorting of route elements\n
-    · New: OpenStreetMap: Offer a link to download OpenStreetMap offline maps\n
-    · New: OpenStreetMap: Integrate downloaded OpenStreetMap offline map files into c:geo after tapping on them\n
-    · New: Map: Optionally switch between compact and regular icon modes automatically depending on amount of caches displayed\n
-    · New: Map: Customize history track, circle, individual route and individual track map line colors and widths\n
-    · New: Support cache rating and managing of favorites for geocaching.su\n
-    · New: Add debug view for program settings\n
-    · New: Internal: Upgraded several included libraries to reflect our new minimum system requirements\n
-    · Fix: Internal: Removed styles / themes workarounds used for older Android versions\n
-    · Fix: Internal: Remove old program code no longer used for supported Android versions\n
-    · Fix: Fix for slider preference problem on Android 7\n
-    · Fix: Fix translation issues for several plural forms\n
-    · Fix: Adapt Whereigo URL checker to catch more Whereigo links\n
-    · Fix: Adapt to updated terracaching details URL\n
-    · Fix: Allow restore of settings backup created with c:geo version 2020.03.30 or earlier\n
-    · Fix: Other code cleanup\n
+    \n
+<b>Map:<b>\n
+· New: Offer a link to download OpenStreetMap offline maps\n
+· New: Integrate downloaded OpenStreetMap offline map files into c:geo after tapping on them\n
+· New: Optionally switch between compact and regular icon modes automatically depending on amount of caches displayed\n
+· Change: Renamed trail / trail history / history trail to history track\n
+· New: History track: Allow export as GPX track file\n
+· New: History track: Make max. length configurable\n
+· New: Load GPX track files and show individual track on map\n
+· New: Individual routes: Allow sorting of route elements\n
+· New: Customize history track, circle, individual route and individual track map line colors and widths\n
+
+<b>Cache list:</b>\n
+· Change: Difficulty and terrain filter match exact values only, no longer ranges\n
+· Change: Fast scroll only gets enabled after fling gesture with minimum length\n
+
+<b>Cache details:</b>\n
+· Change: Open links in cache description as separate task\n
+· Fix: Adapt Whereigo URL checker to catch more Whereigo links\n
+
+<b>Supported geocaching platforms:</b>\n
+· Change: Set all connectors to https\n
+· New: Support cache rating and managing of favorites for geocaching.su\n
+· Fix: Adapt to updated terracaching details URL\n
+
+<b>System requirements:</b>\n
+· Change: System requirements: c:geo now requires your system to run at least Android 5.0\n
+· Change: Set target SDK to 29 to comply with upcoming requirements for Play store\n
+· New: Internal: Upgraded several included libraries to reflect our new minimum system requirements\n
+· Fix: Internal: Removed styles / themes workarounds used for older Android versions\n
+· Fix: Internal: Remove old program code no longer used for supported Android versions\n
+
+<b>Other changes:</b>\n
+· Change: New adaptive launcher icon, following the new specs from Play store (also used on mainscreen)\n
+· New: Add debug view for program settings\n
+· Fix: Fix for slider preference problem on Android 7\n
+· Fix: Fix translation issues for several plural forms\n
+· Fix: Allow restore of settings backup created with c:geo version 2020.03.30 or earlier\n
+· Fix: Other code cleanup\n
   </string>
 </resources>
