--- a/main/res/values/changelog_master.xml
+++ b/main/res/values/changelog_master.xml
@@ -4,7 +4,7 @@
   <string name="changelog_master" translatable="false">
      <b>Next release:</b>\n
     \n
-<b>Map:<b>\n
+<b>Map:</b>\n
 · New: Offer a link to download OpenStreetMap offline maps\n
 · New: Integrate downloaded OpenStreetMap offline map files into c:geo after tapping on them\n
 · New: Optionally switch between compact and regular icon modes automatically depending on amount of caches displayed\n
