--- a/main/res/menu/map_activity.xml
+++ b/main/res/menu/map_activity.xml
@@ -20,6 +20,9 @@
                 android:id="@+id/menu_group_map_sources"
                 android:checkableBehavior="single" >
             </group>
+            <group
+                android:id="@+id/menu_download_offlinemap">
+            </group>
         </menu>
     </item>
     <item
