--- a/main/res/values/changelog_master.xml
+++ b/main/res/values/changelog_master.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
   <!-- changelog for the master branch -->
-  <string name="changelog_master" translatable="false">
-     <b>Next release:</b>\n
-    \n
+  <string name="changelog_master" translatable="false"><Data><![CDATA[<div>
+<h1>Next release:</h1>
 
-<b>Map:</b>\n
+<h4>Map:</h4>
+<ul>
 · New: Offer a link to download OpenStreetMap offline maps\n
 · New: Integrate downloaded OpenStreetMap offline map files into c:geo after tapping on them\n
 · New: Optionally switch between compact and regular icon modes automatically depending on amount of caches displayed\n
@@ -15,40 +15,47 @@
 · New: Load GPX track files and show individual track on map\n
 · New: Individual routes: Allow sorting of route elements\n
 · New: Customize history track, circle, individual route and individual track map line colors and widths\n
-\n
+</ul>
 
-<b>Cache list:</b>\n
+<h4>Cache list:</h4>
+<ul>
 · Change: Difficulty and terrain filter match exact values only, no longer ranges\n
 · Change: Fast scroll only gets enabled after fling gesture with minimum length\n
 · New: Fast scroll thumbs (info on position in list)\n
-\n
+</ul>
 
-<b>Cache details:</b>\n
+<h4>Cache details:</h4>
+<ul>
 · Change: Open links in cache description as separate task\n
 · Fix: Adapt Whereigo URL checker to catch more Whereigo links\n
-\n
+</ul>
 
-<b>Supported geocaching platforms:</b>\n
+<h4>Supported geocaching platforms:</h4>
+<ul>
 · Change: Set all connectors to https\n
 · New: Support cache rating and managing of favorites for geocaching.su\n
 · Fix: Adapt to updated terracaching details URL\n
-\n
+</ul>
 
-<b>System requirements:</b>\n
+<h4>System requirements:</h4>
+<ul>
 · Change: System requirements: c:geo now requires your system to run at least Android 5.0\n
 · Change: Set target SDK to 29 to comply with upcoming requirements for Play store\n
 · New: Internal: Upgraded several included libraries to reflect our new minimum system requirements\n
 · Fix: Internal: Removed styles / themes workarounds used for older Android versions\n
 · Fix: Internal: Remove old program code no longer used for supported Android versions\n
-\n
+</ul>
 
-<b>Other changes:</b>\n
+<h4>Other changes:</h4>
+<ul>
 · Change: New adaptive launcher icon, following the new specs from Play store (also used on mainscreen)\n
 · New: Debug view for program settings (settings - system - view settings)\n
 · Fix: Fix for slider preference problem on Android 7\n
 · Fix: Fix translation issues for several plural forms\n
 · Fix: Allow restore of settings backup created with c:geo version 2020.03.30 or earlier\n
 · Fix: Other code cleanup\n
+</ul>
 
+</div>]]></Data>
   </string>
 </resources>
