implement FastScrollListener (fix #8406) - disable fastscroll by default (cache list, cache detail waypoint view, cache detail log view) - enable new fastscroll behavior on demand for those views - removed fastscroll for useful apps view

--- a/main/res/layout/cachedetail_waypoints_page.xml
+++ b/main/res/layout/cachedetail_waypoints_page.xml
@@ -7,7 +7,7 @@
     android:clickable="true"
     android:clipToPadding="false"
     android:divider="?background_color"
-    android:fastScrollEnabled="true"
+    android:fastScrollEnabled="false"
     android:focusable="false"
     android:footerDividersEnabled="false"
     android:headerDividersEnabled="false"
