--- a/main/res/values/changelog_master.xml
+++ b/main/res/values/changelog_master.xml
@@ -43,6 +43,7 @@
 
 <h4>System requirements:</h4>
 <ul>
+· <b>Warning: c:geo is not yet compatible with Android 11!</b>\nEither do not upgrade to Android 11 or stay at an older version of c:geo for now\n
 · Change: System requirements: c:geo now requires your system to run at least Android 5.0\n
 · Change: Set target SDK to 29 to comply with upcoming requirements for Play store\n
 · New: Internal: Upgraded several included libraries to reflect our new minimum system requirements\n
