add menu option to reset all configurable map colors (fix #8683)

--- a/main/res/menu/map_activity.xml
+++ b/main/res/menu/map_activity.xml
@@ -107,6 +107,11 @@
                     </group>
                 </menu>
             </item>
+            <item
+                android:id="@+id/menu_reset_linecolors"
+                android:icon="@drawable/ic_menu_colors"
+                android:title="@string/map_reset_linecolors">
+            </item>
         </menu>
     </item>
     <item
