--- a/main/res/values/changelog_master.xml
+++ b/main/res/values/changelog_master.xml
@@ -2,8 +2,15 @@
 <resources>
   <!-- changelog for the master branch -->
   <string name="changelog_master" translatable="false"><Data><![CDATA[<div>
+<h4>Map:</h4>
+<ul>
 <li>Add option in map menu to reset all map colors</li>
+</ul>
+
+<h4>Cache details:</h4>
+<ul>
 <li>Changed sync logic for personal notes in caches</li>
+</ul>
 </div>]]></Data>
   </string>
 </resources>
