add default function to ColorpickerPreference

--- a/main/res/values/attrs.xml
+++ b/main/res/values/attrs.xml
@@ -48,6 +48,7 @@
     <!-- attributes for ColorpickerPreference -->
     <declare-styleable name="ColorpickerPreference">
         <attr name="showOpaquenessSlider" format="boolean" />
+        <attr name="defaultColor" format="color" />
     </declare-styleable>
 
     <!-- attributes for SeekbarPreference -->
