--- a/main/res/values/changelog_master.xml
+++ b/main/res/values/changelog_master.xml
@@ -12,6 +12,7 @@
 <h4>Cache details:</h4>
 <ul>
 <li>Changed sync logic for personal notes in caches</li>
+<li>Support backup for waypoints to notes, using format @name (type) coordinates&lt;newline&gt;\"user note\"
 </ul>
 
 <h4>Other:</h4>
