--- a/main/res/layout/twotexts_twobuttons_item.xml
+++ b/main/res/layout/twotexts_twobuttons_item.xml
@@ -18,17 +18,13 @@
         android:layout_marginRight="110dip"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:ellipsize="end"
-        android:lines="1"
         android:paddingRight="3dip"
         android:paddingTop="5dip"
         android:scrollHorizontally="true"
         android:textColor="?text_color"
         android:textIsSelectable="false"
         android:textSize="18sp"
-        tools:text="title"
-        android:maxLines="1" />
-
+        tools:text="title" />
     <TextView
         android:id="@+id/detail"
         android:layout_width="fill_parent"
