colorAccent at mainActivity

--- a/main/res/values/changelog_master.xml
+++ b/main/res/values/changelog_master.xml
@@ -20,6 +20,7 @@
 <ul>
 <li>Internal: Added extension table to database</li>
 <li>Internal: Fixed some issues with database structure</li>
+<li>Apply c:geo's orange to start screen actionbar</li>
 </ul>
 </div>]]></Data>
   </string>
