--- a/main/res/values/changelog_release.xml
+++ b/main/res/values/changelog_release.xml
@@ -14,7 +14,7 @@
 · Change: History track: Remove "shadow" to make history track line consistent with other map lines\n
 · New: Customize history track, circle, individual route and individual track map line colors and widths\n
 · New: Load GPX track files and show individual track on map\n
-· New: Individual routes: Allow sorting of route elements\n
+· New: Individual routes - Allow sorting of route elements\n
 </ul>
 
 <h4>Cache list:</h4>
