--- a/main/res/values/strings_not_translatable.xml
+++ b/main/res/values/strings_not_translatable.xml
@@ -44,7 +44,7 @@
     bekuno||c|
     capoaira|https://github.com/capoaira|c|
     eddiemuc|https://github.com/eddiemuc|c|
-    fm-sys|https://github.com/fm-sys|c|
+    fm-sys|https://github.com/fm-sys|cg|
     jakedot||c|
     jgoestl||c|
     jonas-koeritz||c|
