--- a/main/res/values/changelog_master.xml
+++ b/main/res/values/changelog_master.xml
@@ -9,10 +9,19 @@
 <li>New: Map downloader for OpenStreetMap offline maps (see map selector menu and settings - map)</li>
 <li>New: Open local .map files in c:geo by tapping on them</li>
 <li>New: Colorpicker for map lines offers \"default\" button</li>
-<li>New: Export individual route as GPX route file</li>
-<li>New: Import individual route from GPX route file (having geocode as route point names)</li>
-<li>New: Show warning before clearing an individual route</li>
-<li>New: Individual tracks: Option added to center on track</li>
+</ul>
+
+<h4>Map: Individual routes:</h4>
+<ul>
+<li>New: Export route as GPX route file</li>
+<li>New: Import route from GPX route file (having geocode as route point names)</li>
+<li>New: Option added to center on route</li>
+<li>New: Show warning before clearing a route</li>
+</ul>
+
+<h4>Map: Individual tracks:</h4>
+<ul>
+<li>New: Option added to center on track</li>
 <li>New: Show Warning before overwriting an existing track</li>
 <li>New: Show warning on \"load track\" if an empty track file or a GPX file containing a route was selected</li>
 <li>Change: Group \"individual track\" related entries into its own sub menu</li>
@@ -20,7 +29,7 @@
 
 <h4>Cache details:</h4>
 <ul>
-<li>Changed sync logic for personal notes in caches</li>
+<li>Changed sync logic for personal notes in caches to avoid duplication of personal notes</li>
 <li>New: Personal note editor will grow automatically for longer texts</li>
 <li>Support backup for waypoints to notes, using format @name (type) coordinates&lt;newline&gt;\"user note\"</li>
 <li>Remembers offline found count for every connector and applies those values to the [NUMBER] parameter on logging</li>
@@ -35,8 +44,13 @@
 
 <h4>Other:</h4>
 <ul>
-<li>Change: Set colorAccent on mainscreen, cache list selector, and several dialogs to c:geo orange</li>
+<li>New: Include offline find counter on homescreen</li>
+<li>New: Individual route sort view: Tap on item to open cache details</li>
+<li>Change: Set colorAccent to c:geo orange in many more places</li>
 <li>Fix: Use 24 hour time formatter for logfile and export files for individual routes and history track</li>
+<li>Many other small fixes</li>
+<li>Logfile: Added more info levels to logfile</li>
+<li>Logfile: Added option to write extended logfile with even more info</li>
 <li>Internal: Updated contributor\'s list</li>
 <li>Internal: Added extension table to database</li>
 <li>Internal: Fixed some issues with database structure</li>
