--- a/main/res/values/themes.xml
+++ b/main/res/values/themes.xml
@@ -205,6 +205,7 @@
         <item name="android:colorAccent">@color/colorAccent</item>
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:alertDialogTheme">@style/Dialog_Alert</item>
+        <item name="text_color">@color/text_dark</item>
     </style>
 
     <style name="settings.light" parent="@android:style/Theme.DeviceDefault.Light.DarkActionBar">
@@ -222,6 +223,7 @@
         <item name="android:colorAccent">@color/colorAccent</item>
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:alertDialogTheme">@style/Dialog_Alert_light</item>
+        <item name="text_color">@color/text_light</item>
     </style>
 
     <style name="Dialog_Alert" parent="@style/Theme.AppCompat.Dialog.Alert">
